@@ -1,2 +1,5 @@
 (c) 2007-2008 Enrique Benimeli Bofarull
 (c) 2008 Universitat d'Alacant / Universidad de Alicante
+
+(c) 2008-2009 Jacob Nordfalk
+(c) 2009 Nepala Esperanto-Asocio, http://www.esperanto.org.np/
